--- a/Actividad-1/index.html
+++ b/Actividad-1/index.html
@@ -1,1 +1,29 @@
-Hola!
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Mi Pagina</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  </head>
+  <body class="p-3">
+  <!-- v -->
+<div class="m-2 p-0">
+  <h1>Coronavirus</h1>
+  <div class="alert alert-danger">
+    <em>Este virus se transmite por vía respiratoria a través de contacto estrecho, o por contacto con superficies contaminadas</em>
+  </div>
+  <img src="http://www.villaocamposf.com.ar/img/noticias/quedate.JPG" alt="Quedate en tu casa">
+  <ul>
+    <li>
+      <a href="pagina.html">¿Cómo cuidarnos y cuidar a los demás?</a>
+    </li>
+    <li>
+      <a href="https://www.argentina.gob.ar/salud/coronavirus-COVID-19">Mantenete siempre actualizado a través de medios oficiales</a>
+    </li>
+  </ul>
+</div>
+
+
+  <!-- ^ -->
+  </body>
+</html>
