--- a/Actividad-1/pagina.html
+++ b/Actividad-1/pagina.html
@@ -1,1 +1,63 @@
-página
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Cuidados</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  </head>
+  <body class="p-3">
+  <!-- v -->
+<div class="m-2 p-0">
+  <div class="alert alert-danger">
+    <strong>¿Cómo cuidarnos y cuidar a los demás?</strong>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <div class="card">
+          <img class="card-img-top" src="https://www.argentina.gob.ar/sites/default/files/coronavirus-estornudar.png" alt="estornudar y toser en el codo">
+          <div class="card-body">
+            <h5>Estornudá y/o tosé en el pliegue del codo</h5>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card">
+          <img class="card-img-top" src="https://www.argentina.gob.ar/sites/default/files/coronavirus-lavar-manos.png" alt="lavado de manos">
+          <div class="card-body">
+            <h5>Lavate las manos regularmente</h5>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <div class="card">
+          <img class="card-img-top" src="https://www.argentina.gob.ar/sites/default/files/coronavirus-ojos-nariz.png" alt="no tocarse la cara">
+          <div class="card-body">
+            <h5>No te lleves las manos a ojos, nariz y boca</h5>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card">
+          <img class="card-img-top" src="https://www.argentina.gob.ar/sites/default/files/coronavirus-desinfectar.png" alt="desinfección de artículos de uso regular">
+          <div class="card-body">
+            <h5>Limpiá los objetos de uso frecuente</h5>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="m-4 p-0">
+  <a href="index.html">Volver a página principal</a>
+</div>
+
+
+  <!-- ^ -->
+  </body>
+</html>
