--- a/Actividad-1/pagina.html
+++ b/Actividad-1/pagina.html
@@ -54,7 +54,7 @@
 </div>
 
 <div class="m-4 p-0">
-  <a href="index.html">Volver a página principal</a>
+  <a href="index.html">Volver al inicio</a>
 </div>
 
 
