--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- v -->
 <div class="m-3 p-0">
   <div class="alert alert-success">
-    <h2>¡Hola! Soy Nadu</h2>
+    <h2>¡Hola! Soy Camotita</h2>
   </div>
   <div class="alert alert-info">
     <p>Soy cordobesa, comunicadora institucional, porfiada y curiosa</p>
