--- a/Actividad-2/index.html
+++ b/Actividad-2/index.html
@@ -1,1 +1,72 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Mi Pagina</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  </head>
+  <body class="p-3">
+  <!-- v -->
+<h3>¡Hola! Soy el título nivel 3</h3>
+
+<h3>¡Hola! Soy el título nivel 3</h3>
+
+<p>Yo soy el párrafo</p>
+
+<p>Yo soy el párrafo</p>
+
+<p>Yo soy el párrafo</p>
+
+<a href="https://getpublii.com/">link a Publii</a>
+
+<a href="https://getpublii.com/">link a Publii</a>
+
+<a href="https://getpublii.com/">link a Publii</a>
+
+<img src="https://images-na.ssl-images-amazon.com/images/I/71kxA5OdzrL._AC_SY450_.jpg" alt="Abbey Road lego">
+
+<img src="https://images-na.ssl-images-amazon.com/images/I/71kxA5OdzrL._AC_SY450_.jpg" alt="Abbey Road lego">
+
+<img src="https://images-na.ssl-images-amazon.com/images/I/71kxA5OdzrL._AC_SY450_.jpg" alt="Abbey Road lego">
+
+<ul>
+  <li>
+    Dulce de leche
+  </li>
+  <li>
+    Dentífrico
+  </li>
+  <li>
+    Vinagre
+  </li>
+</ul>
+
+<ul>
+  <li>
+    Dulce de leche
+  </li>
+  <li>
+    Dentífrico
+  </li>
+  <li>
+    Vinagre
+  </li>
+</ul>
+
+<ul>
+  <li>
+    Dulce de leche
+  </li>
+  <li>
+    Dentífrico
+  </li>
+  <li>
+    Vinagre
+  </li>
+</ul>
+
+
+  <!-- ^ -->
+  </body>
+</html>
 
