--- a/Actividad-4/index.html
+++ b/Actividad-4/index.html
@@ -1,1 +1,137 @@
-holu
+<!doctype html>
+<html>
+
+<head>
+	<title>Actividad 4</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+</head>
+
+<body class="m-3">
+	<h1>Tablas de datos </h1>
+	<h2>Tabla simple </h2>
+	<table class="table table-bordered">
+		<tbody>
+			<tr>
+				<td class="p-3">Monopolio</td>
+			</tr>
+		</tbody>
+	</table>
+
+	<h2> Tabla con múltiples filas y columnas </h2>
+	<table class="table table-bordered">
+		<tbody>
+			<tr>
+				<td class="text-center">🐧 </td>
+				<td class="text-center"> </td>
+				<td class="text-center">🙀 </td>
+			</tr>
+			<tr>
+				<td class="text-center"> </td>
+				<td class="text-center">🙀 </td>
+				<td class="text-center"> 🐧</td>
+			</tr>
+			<tr>
+				<td class="text-center"> 🙀</td>
+				<td class="text-center"> 🐧</td>
+				<td class="text-center"> </td>
+			</tr>
+		</tbody>
+	</table>
+
+	<h2>Tabla con cabecera y cuerpo</h2>
+	<table class="table table-bordered table-striped table-hover table-dark">
+		<thead>
+			<th>Provincia </th>
+			<th>Gentilicio </th>
+		</thead>
+		<tbody>
+			<tr>
+				<td><strong>Córdoba</strong> </td>
+				<td> Cordobés / Cordobesa</td>
+			</tr>
+			<tr>
+				<td> <strong> Chubut </strong> </td>
+				<td> Chubutense </td>
+			</tr>
+		</tbody>
+	</table>
+
+	<h2>Tabla con cabecera, cuerpo, pie de página y caption</h2>
+	<table class="table table-bordered table-striped table-hover">
+		<caption>Cantidad de horas trabajadas en el mes de Abril</caption>
+		<thead>
+			<th>Período</th>
+			<th>Cantidad de horas trabajadas</th>
+		</thead>
+		<tbody>
+			<tr>
+				<td>06/04 al 10/04</td>
+				<td>30 horas</td>
+			</tr>
+			<tr>
+				<td>13/04 al 17/04</td>
+				<td>26 horas</td>
+			</tr>
+			<tr>
+				<td>20/04 al 24/04</td>
+				<td>34 horas</td>
+			</tr>
+			<tr>
+				<td>27/04 al 30/04</td>
+				<td>31 horas</td>
+			</tr>
+		</tbody>
+		<tfoot>
+			<tr>
+				<td><strong>Total mensual</strong></td>
+				<td><strong>121 horas</strong></td>
+			</tr>
+		</tfoot>
+	</table>
+
+	<h2>Tabla con columnas largas</h2>
+	<table class="table table-bordered table-hover table-striped">
+		<caption>Problemas con lógica en 3, 2, 1...</caption>
+		<thead class="table table-dark">
+			<tr>
+				<th colspan="2" class="text text-center">Input</th>
+				<th colspan="2" class="text text-center">Output</th>
+			</tr>
+			<tr>
+				<th>A</th>
+				<th>B</th>
+				<th>And</th>
+				<th>Or</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>true</td>
+				<td>true</td>
+				<td>true</td>
+				<td>true</td>
+			</tr>
+			<tr>
+				<td>true</td>
+				<td>false</td>
+				<td>false</td>
+				<td>true</td>
+			</tr>
+			<tr>
+				<td>false</td>
+				<td>true</td>
+				<td>false</td>
+				<td>true</td>
+			</tr>
+			<tr>
+				<td>false</td>
+				<td>false</td>
+				<td>false</td>
+				<td>false</td>
+			</tr>
+		</tbody>
+	</table>
+</body>
+
+</html>
