--- a/Actividad-5/index.html
+++ b/Actividad-5/index.html
@@ -1,1 +1,43 @@
-g
+<!doctype html>
+<html>
+
+<head>
+	<title>CSS Playground</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" />
+</head>
+
+<body class="m-3">
+	<h2 id="titulo-1">Jugando al CSS</h2>
+
+	<p>El titulo no tan titulo</p>
+	<div class="out">
+		<div class="in">
+			Esta es la prueba de rellenos, bordes, margin y padding
+		</div>
+	</div>
+	<div class="base">
+		<h2 id="titulo-2">El subtitulo disruptivo porque es mas largo que el titulo</h2>
+		<p class="impar primero">
+			<span class="ejemplo">tag</span>
+		</p>
+		<p class="par primero">
+			<span class="ejemplo">.clase</span> y con muy poca clase
+		</p>
+		<p class="impar">
+			<span class="ejemplo">#id</span>
+		</p>
+		<p class="par">
+			<span class="ejemplo">tag.clase.otra</span>
+		</p>
+		<p class="impar ultimo">
+			<span class="ejemplo">.ancestro>.descendiente-directo</span> arbol genealogico 1
+		</p>
+		<p class="par ultimo">
+			<span class="ejemplo">.ancestro .descendiente-indirecto</span> arbol genealogico 2
+		</p>
+	</div>
+	<h3> El tercer subtitulo</h3>
+	<input type="color" value="#ff0111"> La prueba de color que acabo de comprender </input>
+</body>
+
+</html>
