--- a/Actividad-6/index.html
+++ b/Actividad-6/index.html
@@ -7,6 +7,7 @@
 		content="width=device-width, minimum-scale=1.0, initial-scale=1, maximum-scale=1.0, user-scalable=no">
 	<title>Titulo de Pagina</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+	<link rel="stylesheet" href="style.css"/>
 </head>
 
 <body class="p-3 bg-light">
